--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-    "name": "@purinton/mcp-server-template",
+    "name": "@purinton/developer",
     "type": "module",
     "version": "1.0.0",
     "description": "A Model Context Protocol (MCP) server template for building AI and automation tool APIs.",
-    "main": "mcp-server-template.mjs",
+    "main": "developer.mjs",
     "scripts": {
-        "start": "node mcp-server-template.mjs",
+        "start": "node developer.mjs",
         "test": "npx --node-options=\"--experimental-vm-modules --no-warnings\" jest --detectOpenHandles --silent"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/purinton/mcp-server-template.git"
+        "url": "git+https://github.com/purinton/developer.git"
     },
     "keywords": [
-        "mcp-server",
-        "mcp-server-template",
-        "ai-tools",
-        "automation",
-        "nodejs",
-        "template"
+        "developer",
+        "nodejs"
     ],
     "author": "Russell Purinton <russell@purinton.us>",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/purinton/mcp-server-template/issues"
+        "url": "https://github.com/purinton/developer/issues"
     },
-    "homepage": "https://github.com/purinton/mcp-server-template#readme",
+    "homepage": "https://github.com/purinton/developer#readme",
     "devDependencies": {
         "jest": "^30.0.0"
     },
