--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 LOG_LEVEL=info
 MCP_PORT=1234
 MCP_TOKEN=your_token_here
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=your_password_here
+MYSQL_DATABASE=mcp_db
