--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@purinton/developer",
     "type": "module",
-    "version": "1.0.0",
-    "description": "A Model Context Protocol (MCP) server template for building AI and automation tool APIs.",
+    "version": "1.0.18",
+    "description": "A customizable Model Context Protocol (MCP) server for AI, automation, and developer tool APIs. Includes dynamic tool loading, multi-language script execution, and remote system integration.",
     "main": "developer.mjs",
     "scripts": {
         "start": "node developer.mjs",
@@ -14,7 +14,18 @@
     },
     "keywords": [
         "developer",
-        "nodejs"
+        "nodejs",
+        "MCP",
+        "automation",
+        "AI tools",
+        "tool server",
+        "remote scripting",
+        "multi-language",
+        "python",
+        "php",
+        "javascript",
+        "ssh",
+        "sql"
     ],
     "author": "Russell Purinton <russell@purinton.us>",
     "license": "MIT",
@@ -36,6 +47,8 @@
     "dependencies": {
         "@purinton/common": "^1.0.16",
         "@purinton/mcp-server": "^1.0.18",
-        "dotenv": "^16.5.0"
+        "@purinton/mysql": "^1.0.9",
+        "dotenv": "^16.5.0",
+        "ssh2": "^1.16.0"
     }
 }
